<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
        android:id="@+id/lstAlumnos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/item_divider"
        android:dividerHeight="1dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />
    <RelativeLayout
        android:id="@+id/rlListaVacia"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:gravity="center_horizontal|center_vertical" >
        <ImageView
            android:id="@+id/imgNuevoAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/no_hay_alumnos"
            android:src="@drawable/ic_user_add" />
        <TextView
            android:id="@+id/lblNoHayAlumnos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgNuevoAlumno"
            android:layout_centerHorizontal="true"
            android:text="@string/no_hay_alumnos" />
    </RelativeLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:src="@drawable/fab_add_icon" />

</merge>