<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navigation_drawer_header_height"
    android:background="@drawable/background_poly"
    android:paddingLeft="@dimen/navigation_drawer_paddingLeft"
    android:paddingRight="@dimen/navigation_drawer_paddingRight"
    android:paddingTop="@dimen/statusBarHeight">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_drawer_header_textBox_height"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/navigation_drawer_header_marginBottom"

        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            tools:text="Pedro Joya"
            android:textSize="14sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            tools:text="pedro.joya@iessaladillo.es"
            android:textSize="14sp"
            android:textStyle="normal"

            />
    </LinearLayout>
</RelativeLayout>