<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/lblDataLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_lblDataLabel"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/lblData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/activity_main_lblData"/>

    <Button
        android:id="@+id/btnRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/activity_main_btnRequest"/>

</LinearLayout>